# Parallel_Connect4_OpenMP

./: CMakeLists.txt  README.md  connect4.cpp
